Ready for fetch metals

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "express": "4.17.1",
     "node-fetch": "2.6.0",
     "on-finished": "2.3.0",
-    "pretty-error": "2.1.1",
-    "vanilla-storage": "0.1.6"
+    "pretty-error": "2.1.1"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
