--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "masterticker",
+  "name": "tickermaster",
   "description": "A new expanded and private ticker running on the blockchain.",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "dependencies": {
     "archiver": "3.1.1",
     "body-parser": "1.19.0",
