--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tickermaster",
   "description": "A new expanded and private ticker running on the blockchain.",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "dependencies": {
     "archiver": "3.1.1",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cors": "2.8.5",
-    "cron": "^1.7.2",
+    "cron": "1.7.2",
     "dotenv": "8.1.0",
     "express": "4.17.1",
     "node-fetch": "2.6.0"
@@ -22,15 +22,18 @@
     "eslint-config-airbnb": "latest",
     "eslint-plugin-import": "2.18.2",
     "jest": "23.6.0",
-    "nodemon": "1.19.1"
+    "nodemon": "1.19.1",
+    "parcel-bundler": "1.12.4"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "lint": "eslint src/**",
+    "build": "parcel build src/scripts/index.js src/styles/index.css",
+    "watch": "parcel src/scripts/index.js src/styles/index.css",
+    "server": "babel-node src/index.js",
+    "start": "yarn build && yarn server",
+    "start:dev": "nodemon --ignore '/dist/**' --ignore '/store/**' --exec yarn start",
     "test": "jest --detectOpenHandles",
-    "build": "babel -d ./dist ./src -s",
-    "start": "npm run build && NODE_ENV=production node ./dist/index.js",
-    "start:dev": "nodemon --ignore '/dist/**' --ignore '/store/**' --exec NODE_ENV=development babel-node src/index.js"
+    "lint": "eslint src/**"
   },
   "engines": {
     "node": "10.x"
