--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cron": "1.7.2",
     "dotenv": "8.1.0",
     "express": "4.17.1",
-    "node-fetch": "2.6.0"
+    "node-fetch": "2.6.0",
+    "x-ray": "^2.3.4"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
